# Compilerbau

./: .gitignore  CMakeLists.txt  readme.md
Assignment1/: makefile  readme.md  stack.c  stack.h  syntree.c  syntree.h  syntree_variant_b.c  syntree_variant_b.h  syntree_variant_j.c  syntree_variant_j.h  teststack.c  testsyntree.c  testsyntree_b.c  testsyntree_j.c
Assignment2/: readme.md
Assignment2/c1-scanner/: makefile  minako-lexic.l  minako.h  testscanner.c
Assignment2/urlscanner/: makefile  testurlscanner.c  urlscanner.h  urlscanner.l
Assignment3/: readme.md
Assignment3/handparser/: grammatik-c-1.txt  makefile  minako-lexic.l  minako-syntax.c  minako.h
Assignment4/: demorgan.c1  grammatik-c1.txt  makefile  minako-lexic.l  minako-syntax.y  note.txt  readme.md
